          MethodInfo and RepresentationInfo. Removed unecessary methods
          on WadlResource like getRepresentationInfo(Variant) and
          getParametersInfo(RequestInfo|ResponseInfo|Representation-
          Info). Added MethodInfo#add*() short-cut methods.
        - JAX-RS provider exception handling improved in the
          MessageBodyReader class. Contributed by Bruno Dumon. 
    - Misc
        - Updated Grizzly to version 1.8.4.
    
- 1.1 Milestone 5 (2008-08-07)
    - Security warning
        - The handling of Context has been significantly refactored in 
          this release. A new Context#createChildContext() method has
          been added to create a new isolated child context from a 
          parent component's context. Application(Context) constructor
          doesn't wrap the given context anymore. Attach methods on
          virtual hosts and internal component router now automatically
          set the child context on the target application is a null 
          context is detected.
    - Bugs fixed
        - Allowed subclasses of StatusService to get the throwable 
          that generate the error in getRepresentation() method. 
          Reported by Loic Mathieu.
        - The Servlet adapter now stops the whole Component instead
          of just the Application.
        - Fixed Apache HttpClient extension bug regarding multiple 
          headers. Reported by Stephan Koops.
        - Fixed potential concurrency issues in Response and
          WrapperList/Series/Form. Reported by Stephan Koops.
        - Fixed potential NPE when using Velocity with template 
          representations having no modification date. Reported by 
          Evan Worley.
        - Moved generation of entries at the the end of Atom feeds. 
          Reported by Bruno Harbulot.
        - Fix potential NPE in Template class. Reported by Ralf
          Bommersbach
        - Fixed bug in HTTP client connectors causing a null response