@@ -108,10 +108,10 @@ lib-json-version: 2.0
 lib-json-id: ${lib-json-package}_${lib-json-version}
 lib-json-maven-groupId: org.json
 
-lib-jsslutils-package: jsslutils
-lib-jsslutils-version: 0.4
+lib-jsslutils-package: org.jsslutils
+lib-jsslutils-version: 0.5
 lib-jsslutils-id: ${lib-jsslutils-package}_${lib-jsslutils-version}
-lib-jsslutils-maven-groupId: jsslutils
+lib-jsslutils-maven-groupId: org.jsslutils
 
 lib-junit-package: org.junit
 lib-junit-version: 4.4
