@@ -1,28 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<projectDescription>
-   <name>jsslutils_0.4</name>
-   <comment></comment>
-   <projects>
-   </projects>
-   <buildSpec>
-      <buildCommand>
-         <name>org.eclipse.jdt.core.javabuilder</name>
-         <arguments>
-         </arguments>
-      </buildCommand>
-      <buildCommand>
-         <name>org.eclipse.pde.ManifestBuilder</name>
-         <arguments>
-         </arguments>
-      </buildCommand>
-      <buildCommand>
-         <name>org.eclipse.pde.SchemaBuilder</name>
-         <arguments>
-         </arguments>
-      </buildCommand>
-   </buildSpec>
-   <natures>
-      <nature>org.eclipse.pde.PluginNature</nature>
-      <nature>org.eclipse.jdt.core.javanature</nature>
-   </natures>
-</projectDescription>
