@@ -1,3 +1,0 @@
-bin.includes = META-INF/,\
-               jsslutils.jar
-
