@@ -1,0 +1,3 @@
+bin.includes = META-INF/,\
+               org.jsslutils.jar
+
