@@ -9,10 +9,10 @@ Export-Package: com.noelios.restlet.ext.ssl;
    jsslutils.sslcontext,
    jsslutils.sslcontext.trustmanagers"
 Import-Package: com.noelios.restlet.util,
- jsslutils.keystores,
- jsslutils.sslcontext,
- jsslutils.sslcontext.keymanagers,
- jsslutils.sslcontext.trustmanagers,
+ org.jsslutils.keystores,
+ org.jsslutils.sslcontext,
+ org.jsslutils.sslcontext.keymanagers,
+ org.jsslutils.sslcontext.trustmanagers,
  org.restlet,
  org.restlet.data,
  org.restlet.resource,
